# quick-image-copy

./: .gitignore  README.md  meson.build
data/: meson.build  package-lock.json  package.json  quick-copy.gresource.xml
data/ui/: emojis.blp  images.blp  main.blp
src/: emojis.vala  experiments.vala  main.vala  meson.build  ui-utils.vala  utils.vala
src/ui/: main-ui.vala
